--- a/index.html
+++ b/index.html
@@ -44,17 +44,21 @@
                 <div class="row">
                     <form class="mb-2">
                         <label for="url" class="form-label">URL: </label>
-                        <input type="text" class="form-control" placeholder="url" name="url_input" id="url" />
+                        <input type="text" class="form-control" placeholder="url" name="url_input" id="url"
+                            data-bs-toggle="tooltip" data-bs-placement="top" title="Url" />
                     </form>
                 </div>
 
                 <div class="row">
                     <div class="input-group mb-3 mt-3">
-                        <input type="number" class="form-control" placeholder="0" name="start_input" id="start" />
+                        <input type="number" class="form-control" placeholder="0" name="start_input" id="start"
+                            data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
                         <span class="input-group-text">-</span>
-                        <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop" />
+                        <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop"
+                            data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
                         <span class="input-group-text">Chunk</span>
-                        <input type="number" class="form-control" placeholder="10" name="stop_input" id="chunk" />
+                        <input type="number" class="form-control" placeholder="10" name="stop_input" id="chunk"
+                            data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
                     </div>
                 </div>
 
