good but not good enough

--- a/dbi.html
+++ b/dbi.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Database interface</title>
-    <link rel="icon" href="/ytdiff/assets/favicon.ico">
-    <link href="/ytdiff/assets/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="icon" href="/ytdiff/assets/favicon.ico" />
+    <link href="/ytdiff/assets/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="/ytdiff/assets/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="/ytdiff/assets/socket.io.min.js" crossorigin="anonymous"></script>
     <script src="/ytdiff/assets/dbi.client.js" crossorigin="anonymous"></script>
@@ -29,12 +29,19 @@
             max-height: 10vh;
         }
 
-        .margins {
-            margin-top: 0px;
-            margin-right: 0px;
-            margin-bottom: 0px;
-            margin-left: 0px;
+        .nav-size {
+            max-height: 10vh;
         }
+
+        /*This is the one that's been causing problems
+        @media (min-width: 992px) {
+            .margins {
+                margin-top: 0px;
+                margin-right: 0px;
+                margin-bottom: 0px;
+                margin-left: 15px !important;
+            }
+        }*/
 
         @media (min-width: 1280px) {
             .margins {
@@ -48,19 +55,19 @@
 </head>
 
 <body>
-    <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark">
+    <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark nav-size">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="/ytdiff/assets/nav.png" alt="" width="30" height="30"
-                    class="d-inline-block align-text-top"><span>-diff</span>
+                    class="d-inline-block align-text-top" /><span>-diff</span>
             </a>
             <a href="../ytdiff" class="link-warning">Back</a>
         </div>
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-xl-5 p-0 margins">
-                <div class="container m-0 p-0 container-table">
+            <div class="col-sm-12 col-md-12 col-lg-5 p-0 m-0 margins">
+                <div class="container-fluid m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
                             <tr>
@@ -71,12 +78,10 @@
                                 <th scope="col" class="table-dark">Expand</th>
                             </tr>
                         </thead>
-                        <tbody id="placeholder">
-
-                        </tbody>
+                        <tbody id="placeholder"></tbody>
                     </table>
                 </div>
-                <div class="container m-0 p-0 container-counters">
+                <div class="container-fluid m-0 p-0 container-counters">
                     <div class="row">
                         <div class="input-group mb-1 mt-3">
                             <input type="number" class="form-control" placeholder="0" name="start_input" id="start_main"
@@ -84,14 +89,18 @@
                             <span class="input-group-text">-</span>
                             <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop_main"
                                 data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
-                            <button id="next" type="button" onclick="nextMain()" class="btn btn-primary">Next</button>
-                            <button id="back" type="button" onclick="backMain()" class="btn btn-primary">Back</button>
+                            <button id="next" type="button" onclick="nextMain()" class="btn btn-primary">
+                                Next
+                            </button>
+                            <button id="back" type="button" onclick="backMain()" class="btn btn-primary">
+                                Back
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-11 col-md-11 col-xl-6 p-0 margins">
-                <div class="container m-0 p-0 container-table">
+            <div class="col-sm-12 col-md-12 col-lg-6 p-0 m-0 margins">
+                <div class="container-fluid m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
                             <tr>
@@ -101,12 +110,10 @@
                                 <th scope="col" class="table-dark">Available</th>
                             </tr>
                         </thead>
-                        <tbody id="listing">
-
-                        </tbody>
+                        <tbody id="listing"></tbody>
                     </table>
                 </div>
-                <div class="container m-0 p-0 container-counters">
+                <div class="container-fluid m-0 p-0 container-counters">
                     <div class="row">
                         <div class="input-group mb-3 mt-3">
                             <input type="number" class="form-control" placeholder="0" name="start_input" id="start_sub"
@@ -117,36 +124,71 @@
                             <span class="input-group-text">-</span>
                             <input type="number" class="form-control" placeholder="10" name="stop_input" id="chunk"
                                 data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
-                            <button id="next-sub" type="button" onclick="nextSub()"
-                                class="btn btn-primary">Next</button>
-                            <button id="back-sub" type="button" onclick="backSub()"
-                                class="btn btn-primary">Back</button>
+                            <button id="next-sub" type="button" onclick="nextSub()" class="btn btn-primary">
+                                Next
+                            </button>
+                            <button id="back-sub" type="button" onclick="backSub()" class="btn btn-primary">
+                                Back
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid m-0 p-0 d-lg-none">
+                    <div class="row">
+                        <div class="col">
+                            <div class="btn-group " role="group" aria-label="controls">
+                                <button id="all" type="button" onclick="select_all()" class="btn btn-primary">
+                                    All
+                                </button>
+                                <button id="none" type="button" onclick="select_none()" class="btn btn-primary">
+                                    None
+                                </button>
+                                <button id="clear" type="button" onclick="depopulateList(true)" class="btn btn-primary">
+                                    Clear
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <button id="dnld" type="button" onclick="download_selected()" class="btn btn-primary ">
+                                Download
+                            </button>
+                        </div>
+                        <div class="col">
+                            <button id="orphan" type="button" onclick="getOrphans()" class="btn btn-primary">
+                                Unlisted
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-1 col-md col-xl m-0 p-0">
-                <!--Toast-->
-                <div style="position: absolute; top: 10px; right: 10px;">
-                    <div class="toast align-items-bottom" role="alert" aria-live="assertive" aria-atomic="true"
-                        id="notify">
-                        <div class="d-flex">
-                            <div class="toast-body">
-
-                            </div>
-                            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast"
-                                aria-label="Close"></button>
-                        </div>
-                    </div>
-                </div>
+            <!--This will be shown only on big screens lg and bigger-->
+            <div class="col-lg m-0 p-0 d-none d-lg-block d-xl-block d-xxl-block">
                 <div class="btn-group-vertical top-50 start-50 translate-middle" role="group" aria-label="controls">
-                    <button id="all" type="button" onclick="select_all()" class="btn btn-primary">All</button>
-                    <button id="none" type="button" onclick="select_none()" class="btn btn-primary">None</button>
-                    <button id="clear" type="button" onclick="depopulateList(true)"
-                        class="btn btn-primary">Clear</button>
-                    <button id="orphan" type="button" onclick="getOrphans()" class="btn btn-primary">Unls</button>
-                    <button id="dnld" type="button" onclick="download_selected()" class="btn btn-primary">Dnld</button>
+                    <button id="all" type="button" onclick="select_all()" class="btn btn-primary">
+                        All
+                    </button>
+                    <button id="none" type="button" onclick="select_none()" class="btn btn-primary">
+                        None
+                    </button>
+                    <button id="clear" type="button" onclick="depopulateList(true)" class="btn btn-primary">
+                        Clear
+                    </button>
+                    <button id="orphan" type="button" onclick="getOrphans()" class="btn btn-primary">
+                        Unls
+                    </button>
+                    <button id="dnld" type="button" onclick="download_selected()" class="btn btn-primary">
+                        Dnld
+                    </button>
                 </div>
+            </div>
+        </div>
+    </div>
+    <!--Toast-->
+    <div style="position: absolute; top: 10px; right: 10px">
+        <div class="toast align-items-bottom" role="alert" aria-live="assertive" aria-atomic="true" id="notify">
+            <div class="d-flex">
+                <div class="toast-body"></div>
+                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
         </div>
     </div>
@@ -162,18 +204,21 @@
             sockSetup();
             getMainlist(0, 10);
         }
-        document.getElementById("chunk").addEventListener('input', function (evt) {
-            var value = parseInt(this.value, 10);
-            if (value >= 1) {
-                var start = parseInt(document.getElementById("start_sub").value, 10);
-                document.getElementById("stop_sub").value = start + value;
-            }
-            else {
-                this.value = 1;
-            }
-        });
+        document
+            .getElementById("chunk")
+            .addEventListener("input", function (evt) {
+                var value = parseInt(this.value, 10);
+                if (value >= 1) {
+                    var start = parseInt(
+                        document.getElementById("start_sub").value,
+                        10
+                    );
+                    document.getElementById("stop_sub").value = start + value;
+                } else {
+                    this.value = 1;
+                }
+            });
     </script>
-
 </body>
 
 </html>
