still working on it, no new ideas

--- a/examples.html
+++ b/examples.html
@@ -1,3 +1,32 @@
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>yt-diff</title>
+    <link rel="icon" href="http://lenovo-ideapad-320-15ikb.tail9ece4.ts.net:8888/ytdiff/assets/favicon.ico">
+    <link href="http://lenovo-ideapad-320-15ikb.tail9ece4.ts.net:8888/ytdiff/assets/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous">
+    <script src="http://lenovo-ideapad-320-15ikb.tail9ece4.ts.net:8888/ytdiff/assets/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <script src="http://lenovo-ideapad-320-15ikb.tail9ece4.ts.net:8888/ytdiff/assets/socket.io.min.js"
+        crossorigin="anonymous"></script>
+    <script src="http://lenovo-ideapad-320-15ikb.tail9ece4.ts.net:8888/ytdiff/assets/client.js"
+        crossorigin="anonymous"></script>
+    <style>
+        .container-table {
+            height: 80vh;
+            max-height: 80vh;
+            overflow-y: scroll;
+            padding-bottom: 15px;
+        }
+
+        .container-table table thead th {
+            position: sticky;
+            top: 0;
+        }
+    </style>
+</head>
+
 <!--This will be shown only on big screens xl(1200px) and bigger ie: hidden on all other-->
 <div class="col-xl d-none d-xl-block d-xxl-block px-1 m-0">
     <div class="btn-group-vertical top-50 start-50 translate-middle" role="group" aria-label="controls">
@@ -71,7 +100,7 @@
 
 
 
-<div class="d-flex flex-column flex-shrink-0 bg-secondary side-b">
+<div class="d-flex flex-column flex-shrink-0 bg-dark side-b" style="width: 3.5rem;height: 100vh;">
     <a href="https://github.com/sagniKdas53?tab=repositories"
         class="d-block link-dark text-decoration-none  border-bottom" title="" data-bs-toggle="tooltip"
         data-bs-placement="right" data-bs-original-title="Icon-only">
