--- a/dbi.html
+++ b/dbi.html
@@ -12,6 +12,24 @@
     <script src="/ytdiff/assets/socket.io.min.js" crossorigin="anonymous"></script>
     <script src="/ytdiff/assets/dbi.client.js" crossorigin="anonymous"></script>
     <style>
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            overflow-x: hidden;
+        }
+
+        .emoji {
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .large-title {
+            width: 75%;
+        }
+
         .container-table {
             height: 80vh;
             max-height: 80vh;
@@ -34,11 +52,11 @@
         }
 
         @media (min-width: 992px) {
-            .margins {
-                margin-top: 0px;
-                margin-right: 0px;
-                margin-bottom: 0px;
-                margin-left: 19px !important;
+            .paddings {
+                padding-top: 0px;
+                padding-right: 0px;
+                padding-bottom: 0px;
+                padding-left: 0.25rem !important;
             }
         }
     </style>
@@ -59,7 +77,7 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-5 px-1 m-0">
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 m-0">
                 <div class="container-fluid m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
@@ -92,16 +110,16 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-7 px-1 m-0">
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 m-0 paddings">
                 <div class="container-fluid m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
                             <tr>
                                 <th scope="col" class="table-dark"><input class="form-check-input" type="checkbox"
                                         value="" id="selector" aria-label="..."></th>
-                                <th scope="col" class="table-dark">Video Title</th>
+                                <th scope="col" class="table-dark large-title">Video Title</th>
                                 <th scope="col" class="table-dark">Downloaded</th>
-                                <th scope="col" class="table-dark">Available</th>
+                                <!--<th scope="col" class="table-dark">Available</th>-->
                             </tr>
                         </thead>
                         <tbody id="listing"></tbody>
@@ -133,12 +151,7 @@
                         <div class="col mb-3">
                             <div class="btn-group position-relative start-50 translate-middle-x" role="group"
                                 aria-label="controls">
-                                <button id="all" type="button" onclick="select_all()" class="btn btn-primary">
-                                    All
-                                </button>
-                                <button id="none" type="button" onclick="select_none()" class="btn btn-primary">
-                                    None
-                                </button>
+
                                 <button id="clear" type="button" onclick="depopulateList(true)" class="btn btn-primary">
                                     Clear
                                 </button>
