I plan on making floating action buttons

--- a/examples.html
+++ b/examples.html
@@ -137,3 +137,15 @@
         </li>
     </ul>
 </div>
+
+
+
+<div class="input-group">
+    <select class="form-select" id="sort-by" aria-label="sorting">
+      <option selected>Choose...</option>
+      <option value="1">ID</option>
+      <option value="2">CreatedAt</option>
+      <option value="3">UpdatedAt</option>
+    </select>
+    <button class="btn btn-outline-secondary" type="button">Button</button>
+  </div>
