--- a/dbi.html
+++ b/dbi.html
@@ -48,6 +48,7 @@
         }
 
         .nav-size {
+            height: auto;
             max-height: 10vh;
         }
 
@@ -94,7 +95,7 @@
                 </div>
                 <div class="container-fluid m-0 p-0 container-counters">
                     <div class="row">
-                        <div class="input-group my-3">
+                        <div class="input-group mt-3">
                             <input type="number" class="form-control" placeholder="0" name="start_input" id="start_main"
                                 data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
                             <span class="input-group-text">-</span>
@@ -108,6 +109,22 @@
                             </button>
                         </div>
                     </div>
+                </div>
+                <div class="container-fluid mb-3 m-0 p-0">
+                    <div class="input-group mt-3">
+                        <select class="form-select" id="sort-by" aria-label="sorting">
+                          <option selected value="0">Choose...</option>
+                          <option value="1">ID</option>
+                          <option value="2">CreatedAt</option>
+                          <option value="3">UpdatedAt</option>
+                        </select>
+                        <select class="form-select" id="order" aria-label="sorting">
+                            <option selected value="0">Choose...</option>
+                            <option value="1">Ascending</option>
+                            <option value="2">Descending</option>
+                          </select>
+                        <button class="btn btn-primary" type="button" onclick="sortLoaded()">Sort</button>
+                      </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 m-0 paddings">
@@ -127,7 +144,7 @@
                 </div>
                 <div class="container-fluid m-0 p-0 container-counters">
                     <div class="row">
-                        <div class="input-group my-3">
+                        <div class="input-group mt-3">
                             <input type="number" class="form-control" placeholder="0" name="start_input" id="start_sub"
                                 data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
                             <span class="input-group-text">-</span>
@@ -145,23 +162,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid m-0 p-0 d-xl-none">
-                    <!--This will be show on all smaller screens-->
+                <div class="container-fluid mt-3 p-0">
                     <div class="row">
                         <div class="col mb-3">
-                            <div class="btn-group position-relative start-50 translate-middle-x" role="group"
-                                aria-label="controls">
-
+                            <div class="btn-group" role="group" aria-label="controls">
                                 <button id="clear" type="button" onclick="depopulateList(true)" class="btn btn-primary">
                                     Clear
                                 </button>
                             </div>
                         </div>
                         <div class="col mb-3">
-                            <button id="dnld" type="button" onclick="download_selected()"
-                                class="btn btn-primary position-relative start-50 translate-middle-x">
-                                Download
-                            </button>
+                            <div class="btn-group float-end" role="group" aria-label="controls">
+                                <button id="dnld" type="button" onclick="download_selected()" class="btn btn-primary me-3">
+                                    Download
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
