--- a/index.html
+++ b/index.html
@@ -12,9 +12,27 @@
     <script src="/ytdiff/assets/socket.io.min.js" crossorigin="anonymous"></script>
     <script src="/ytdiff/assets/client.js" crossorigin="anonymous"></script>
     <style>
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            overflow-x: hidden;
+        }
+
+        .emoji {
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .large-title {
+            width: 75%;
+        }
+
         .container-table {
-            height: 80vh;
-            max-height: 80vh;
+            height: 90vh;
+            max-height: 90vh;
             overflow-y: scroll;
             padding-bottom: 15px;
         }
@@ -23,83 +41,100 @@
             position: sticky;
             top: 0;
         }
+
+        .nav-size {
+            max-height: 10vh;
+        }
     </style>
 </head>
 
 <body>
-    <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark">
+    <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark nav-size">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="/ytdiff/assets/nav.png" alt="" width="30" height="30"
                     class="d-inline-block align-text-top"><span>-diff</span>
             </a>
-            <a href="ytdiff/dbi" class="link-warning">See DB</a>
+            <div>
+                <label for="" class="link-warning" onclick="getOrphans()">Unlisted</label>
+                <a href="ytdiff/dbi" class="link-warning" style="text-decoration: none;">See DB</a>
+            </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col mb-3">
-                <h3>Controls:</h3>
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 m-0 mb-3">
+                <div class="container-fluid">
+                    <h3>Controls:</h3>
 
-                <div class="row">
-                    <form class="mb-2">
-                        <label for="url" class="form-label">URL: </label>
-                        <input type="text" class="form-control" placeholder="url" name="url_input" id="url"
-                            data-bs-toggle="tooltip" data-bs-placement="top" title="Url" />
-                    </form>
-                </div>
-
-                <div class="row">
-                    <div class="input-group mb-3 mt-3">
-                        <input type="number" class="form-control" placeholder="0" name="start_input" id="start"
-                            data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
-                        <span class="input-group-text">-</span>
-                        <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop"
-                            data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
-                        <span class="input-group-text">Chunk</span>
-                        <input type="number" class="form-control" placeholder="10" name="stop_input" id="chunk"
-                            data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
+                    <div class="row">
+                        <form class="mb-2">
+                            <label for="url" class="form-label">URL: </label>
+                            <input type="text" class="form-control" placeholder="url" name="url_input" id="url"
+                                data-bs-toggle="tooltip" data-bs-placement="top" title="Url" />
+                            <!--<textarea class="form-control" id="url_list" rows="3"></textarea>-->
+                        </form>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-7">
-                        <button id="listit" type="button" onclick="list_it()" class="btn btn-primary">List</button>
-                    </div>
-                    <div class="col">
-                        <div class="btn-group" role="group">
-                            <button id="next-sub" type="button" onclick="nextSub()"
-                                class="btn btn-primary">Next</button>
-                            <button id="back-sub" type="button" onclick="backSub()"
-                                class="btn btn-primary">Back</button>
+                    <div class="row">
+                        <div class="input-group mb-3 mt-3">
+                            <input type="number" class="form-control" placeholder="0" name="start_input" id="start"
+                                data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
+                            <span class="input-group-text">-</span>
+                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop"
+                                data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
+                            <span class="input-group-text">Chunk</span>
+                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="chunk"
+                                data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
                         </div>
                     </div>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-7">
-                        <div class="btn-group" role="group">
-                            <button id="all" type="button" onclick="select_all()" class="btn btn-primary">All</button>
-                            <button id="none" type="button" onclick="select_none()"
-                                class="btn btn-primary">None</button>
-                            <button id="clear" type="button" onclick="depopulateList(true)"
-                                class="btn btn-primary">Clear</button>
+
+                    <div class="row">
+                        <div class="col-7">
+                            <div class="btn-group" role="group">
+                                <button id="listit" type="button" onclick="list_it()"
+                                    class="btn btn-primary">List</button>
+                                <button id="clear" type="button" onclick="depopulateList(true)"
+                                    class="btn btn-primary">Clear</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="btn-group" role="group">
+                                <button id="next-sub" type="button" onclick="nextSub()"
+                                    class="btn btn-primary">Next</button>
+                                <button id="back-sub" type="button" onclick="backSub()"
+                                    class="btn btn-primary">Back</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <button id="dnld" type="button" onclick="download_selected()"
-                            class="btn btn-primary">Download</button>
+                    <div class="row mt-2">
+                        <div class="col-7">
+                            <div class="btn-group" role="group">
+                                <button id="all" type="button" onclick="select_all()"
+                                    class="btn btn-primary">All</button>
+                                <button id="none" type="button" onclick="select_none()"
+                                    class="btn btn-primary">None</button>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="btn-group" role="group">
+                                <button id="dnld" type="button" onclick="download_selected()"
+                                    class="btn btn-primary">Download</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 m-0">
                 <div class="container-table">
                     <table class="table table-responsive">
                         <thead>
                             <tr>
-                                <th scope="col" class="table-dark">#</th>
-                                <th scope="col" class="table-dark">Title</th>
+                                <th scope="col" class="table-dark"><input class="form-check-input" type="checkbox"
+                                        value="" id="selector" aria-label="..."></th>
+                                <th scope="col" class="table-dark large-title">Title</th>
                                 <th scope="col" class="table-dark">Saved</th>
-                                <th scope="col" class="table-dark">Avail.</th>
                             </tr>
                         </thead>
                         <div>
@@ -138,6 +173,13 @@
             }
             else {
                 this.value = 1;
+            }
+        });
+        document.getElementById("selector").addEventListener("input", function (evt) {
+            if (this.checked) {
+                select_all();
+            } else {
+                select_none();
             }
         });
     </script>
