god damn it's hard to do all of this

--- a/dbi.html
+++ b/dbi.html
@@ -201,6 +201,7 @@
             document.getElementById("start_sub").value = 0;
             document.getElementById("stop_sub").value = 10;
             document.getElementById("chunk").value = 10;
+            document.getElementById("selector").checked = false;
             sockSetup();
             getMainlist(0, 10);
         }
