--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             document.getElementById("start").value = 0;
             document.getElementById("stop").value = 10;
             document.getElementById("chunk").value = 10;
+            document.getElementById("selector").checked = false;
             sockSetup();
         }
         document.getElementById("chunk").addEventListener('input', function (evt) {
