--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
                     <div class="row">
                         <div class="input-group mb-3 mt-3">
-                            <input type="number" class="form-control" placeholder="0" name="start_input" id="start"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
+                            <input type="number" class="form-control" placeholder="0" min="0" name="start_input"
+                                id="start" data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
                             <span class="input-group-text">-</span>
-                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
+                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_input"
+                                id="stop" data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
                             <span class="input-group-text">Chunk</span>
-                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="chunk"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
+                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_input"
+                                id="chunk" data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
                         </div>
                     </div>
 
@@ -166,16 +166,45 @@
             document.getElementById("selector").checked = false;
             sockSetup();
         }
-        document.getElementById("chunk").addEventListener('input', function (evt) {
-            var value = parseInt(this.value, 10);
-            if (value >= 1) {
-                var start = parseInt(document.getElementById("start").value, 10);
-                document.getElementById("stop").value = start + value;
+
+        function sanity_checker(type, evt) {
+            var value = parseInt(evt.data, 10);
+            //console.log(type, evt.data);
+            if (type == "chunk") {
+                if (value >= 1) {
+                    var start = parseInt(document.getElementById("start").value, 10);
+                    document.getElementById("stop").value = start + value;
+                }
+                else {
+                    this.value = 1;
+                }
+            } else if (type == "start") {
+                if (value >= 0) {
+                    var chunk = parseInt(document.getElementById("chunk").value, 10);
+                    document.getElementById("stop").value = chunk + value;
+                }
+                else {
+                    this.value = 0;
+                }
             }
-            else {
-                this.value = 1;
+            else if (type == "stop") {
+                if (value >= 1) {
+                    var start = parseInt(document.getElementById("start").value, 10);
+                    if (value - start >= 1)
+                        document.getElementById("chunk").value = value - start;
+                    else {
+                        document.getElementById("stop").value = value + 1;
+                        document.getElementById("chunk").value = 1;
+                    }
+                }
+                else {
+                    this.value = 1;
+                }
             }
-        });
+        }
+        document.getElementById("chunk").addEventListener('input', function (evt) { sanity_checker("chunk", evt) });
+        document.getElementById("start").addEventListener('input', function (evt) { sanity_checker("start", evt) });
+        document.getElementById("stop").addEventListener('input', function (evt) { sanity_checker("stop", evt) });
         document.getElementById("selector").addEventListener("input", function (evt) {
             if (this.checked) {
                 select_all();
