--- a/dbi.html
+++ b/dbi.html
@@ -96,11 +96,11 @@
                 <div class="container-fluid m-0 p-0 container-counters">
                     <div class="row">
                         <div class="input-group mt-3">
-                            <input type="number" class="form-control" placeholder="0" name="start_input" id="start_main"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
+                            <input type="number" class="form-control" placeholder="0" min="0" name="start_input"
+                                id="start_main" data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
                             <span class="input-group-text">-</span>
-                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop_main"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
+                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_input"
+                                id="stop_main" data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
                             <button id="next" type="button" onclick="nextMain()" class="btn btn-primary">
                                 Next
                             </button>
@@ -113,18 +113,18 @@
                 <div class="container-fluid mb-3 m-0 p-0">
                     <div class="input-group mt-3">
                         <select class="form-select" id="sort-by" aria-label="sorting">
-                          <option selected value="0">Choose...</option>
-                          <option value="1">ID</option>
-                          <option value="2">CreatedAt</option>
-                          <option value="3">UpdatedAt</option>
+                            <option selected value="0">Choose...</option>
+                            <option value="1">ID</option>
+                            <option value="2">CreatedAt</option>
+                            <option value="3">UpdatedAt</option>
                         </select>
                         <select class="form-select" id="order" aria-label="sorting">
                             <option selected value="0">Choose...</option>
                             <option value="1">Ascending</option>
                             <option value="2">Descending</option>
-                          </select>
+                        </select>
                         <button class="btn btn-primary" type="button" onclick="sortLoaded()">Sort</button>
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 m-0 paddings">
@@ -145,14 +145,14 @@
                 <div class="container-fluid m-0 p-0 container-counters">
                     <div class="row">
                         <div class="input-group mt-3">
-                            <input type="number" class="form-control" placeholder="0" name="start_input" id="start_sub"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
+                            <input type="number" class="form-control" placeholder="0" min="0" name="start_input"
+                                id="start_sub" data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
                             <span class="input-group-text">-</span>
-                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop_sub"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
+                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_input"
+                                id="stop_sub" data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
                             <span class="input-group-text">-</span>
-                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="chunk"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
+                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_input"
+                                id="chunk" data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
                             <button id="next-sub" type="button" onclick="nextSub()" class="btn btn-primary">
                                 Next
                             </button>
@@ -173,7 +173,8 @@
                         </div>
                         <div class="col mb-3">
                             <div class="btn-group float-end" role="group" aria-label="controls">
-                                <button id="dnld" type="button" onclick="download_selected()" class="btn btn-primary me-3">
+                                <button id="dnld" type="button" onclick="download_selected()"
+                                    class="btn btn-primary me-3">
                                     Download
                                 </button>
                             </div>
@@ -202,6 +203,8 @@
             document.getElementById("stop_sub").value = 10;
             document.getElementById("chunk").value = 10;
             document.getElementById("selector").checked = false;
+            document.getElementById("sort-by").value = 1;
+            document.getElementById("order").value = 1;
             sockSetup();
             getMainlist(0, 10);
         }
@@ -217,6 +220,42 @@
                 this.value = 1;
             }
         });
+        function input_limiter(type, evt) {
+            var value = parseInt(evt.data, 10);
+            var start = parseInt(document.getElementById("start_sub").value, 10);
+            if (type == "chunk") {
+                if (value >= 1) {
+                    document.getElementById("stop_sub").value = start + value;
+                }
+                else {
+                    this.value = 1;
+                }
+            } else if (type == "start") {
+                if (value >= 0) {
+                    var chunk = parseInt(document.getElementById("chunk").value, 10);
+                    document.getElementById("stop_sub").value = chunk + value;
+                }
+                else {
+                    this.value = 0;
+                }
+            }
+            else if (type == "stop") {
+                if (value >= 1) {
+                    if (value - start >= 1)
+                        document.getElementById("chunk").value = value - start;
+                    else {
+                        document.getElementById("stop_sub").value = value + 1;
+                        document.getElementById("chunk").value = 1;
+                    }
+                }
+                else {
+                    this.value = 1;
+                }
+            }
+        }
+        document.getElementById("chunk").addEventListener('input', function (evt) { input_limiter("chunk", evt) });
+        document.getElementById("start_sub").addEventListener('input', function (evt) { input_limiter("start", evt) });
+        document.getElementById("stop_sub").addEventListener('input', function (evt) { input_limiter("stop", evt) });
         document.getElementById("selector").addEventListener("input", function (evt) {
             if (this.checked) {
                 select_all();
