remove the numerous console.logs

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="/ytdiff/assets/nav.png" alt="" width="30" height="30"
-                    class="d-inline-block align-text-top"><span>-diff</span>
+                    class="d-inline-block align-text-top"><span class="align-top">-diff</span>
             </a>
             <div>
                 <label for="" class="link-warning" onclick="getOrphans()">Unlisted</label>
